# ContinuousIntegrationSetUp

./: CMakeLists.txt  README.md  main.cpp  test  test.cpp
.github/workflows/: main.yml
